# minian

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  RELEASING.md  TODO.md  cross-registration.ipynb  cspell.config.yaml  environment.yml  minian_config.json  pipeline.ipynb  pipeline_test.ipynb  pyproject.toml  rust_engine_process.md  separation_judgement.ipynb  visualization_architecture.md
.github/workflows/: build.yml  docs-preview.yml  docs.yml  lint.yml  notebook-tests.yml  pipeline-notebook.yml  publish.yml  testandcov.yml
demo_data/: README.md
demo_movies/: README.md  minian_config.json
docs/ext/: normalize_html_id.py  ref_alias.py  toctree.py
docs/source/: conf.py
docs/source/_static/: custom.css
docs/source/api/: index.rst  minian.config.rst  minian.minian_rs.rst  minian.pipelines.rst
docs/source/cross_reg/: index.rst
docs/source/pipeline/: index.rst
docs/source/start_guide/: changelog.md  cli.rst  contribute.rst  faq.rst  index.rst  install.rst  pipeline_config_json.rst
docs/source/tips/: index.rst  performance.rst  pipeline_notebook.rst  variables.rst
minian/: __init__.py  _ffmpeg_constants.py  _version.py  cnmf.py  config.py  constants.py  cross_registration.py  ffmpeg.py  ffmpeg_utils.py  initialization.py  install.py  io.py  logger.py  motion_correction.py  pipeline.py  preprocessing.py  utilities.py  visualization.py  viz_backend.py
minian/cli/: __init__.py  _common.py  data.py  notebooks.py
minian/cnmf/: __init__.py  extras.py  filters.py  graphs.py  legacy.py  noise_estimation.py  spatial.py  temporal.py
minian/data/: __init__.py  _registry.py  cli.py
minian/notebooks/: __init__.py  cli.py
minian/notebooks/cross_registration/: README.md  cross-registration.ipynb
minian/notebooks/pipeline/: README.md  pipeline.ipynb
minian/notebooks/pipeline_groundtruth/: pipeline_groundtruth.ipynb
minian/notebooks/training/01_anatomy/: 01_anatomy.ipynb  README.md
minian/pipelines/: cnmf_process.py  cross_reg.py
minian/simulation/: __init__.py  cache.py  recording.py  scene.py  simulate.py  spec.py  sweep.py
minian/simulation/steps/: __init__.py  base.py  cell.py  motion.py  sensor.py  tissue.py
minian/test/: README.md  _notebook.py  _simulated.py  conftest.py  test_cnmf.py  test_config.py  test_cross_reg.py  test_groundtruth.py  test_minian_rs.py  test_motion_correction.py  test_notebooks.py  test_pipeline.py  test_pre_processing.py  test_utilities.py  test_visualization.py  toy_data.py
minian/test/simulation/: test_caching.py  test_metrics.py  test_recording.py  test_recovery_cnmf.py  test_recovery_motion.py  test_scene.py  test_simulate.py  test_spec.py  test_steps.py  test_structural.py  test_sweep.py
minian/utilities/: __init__.py  array_ops.py  chunking.py  dask_graph.py  datasets.py  ffmpeg_util.py  local_compute.py
minian/visualization/: __init__.py  _constants.py  _numeric.py  _viewer_helpers.py  _viz_constants.py  export.py  pipeline_plots.py  viewers_align.py  viewers_cnmf.py  viewers_varray.py
requirements/: ci-constraints.txt  requirements-base.txt  requirements-doc.txt
scripts/: bench_mc_kernel.py  diagnose_mc_scaling.py  prefetch_data.py  profile_motion_correction.py  run_cross_reg_notebook_check.py  run_pipeline_notebook_check.py  zenodo_manifest.py
separation/: MODULE_CHAIN_CONTRACT.md  test_cross_module_chaining.py
separation/component_filtering/component_filtering/: __init__.py  defaults.py  filter.py
separation/component_filtering/tests/: test_component_filtering_standalone.py
separation/motion_correction/motion_correction/: __init__.py  correct.py  defaults.py
separation/motion_correction/tests/: test_motion_correction_standalone.py
separation/preprocessing/preprocessing/: __init__.py  defaults.py  preprocess.py
separation/preprocessing/tests/: test_preprocessing_standalone.py
separation/source_detection/source_detection/: __init__.py  defaults.py  detect.py
separation/source_detection/tests/: test_source_detection_standalone.py
separation/tools/: run_separation_judgement.py
src-rust/: Cargo.toml
src-rust/src/: filter.rs  lib.rs  workers.rs
