[project]
name = "minian"
version = "1.3.0"
description = "MiniAn is an analysis pipeline and visualization tool inspired by both CaImAn and MIN1PIPE package specifically for Miniscope data."
authors = [
    {name = "MiniAn Developers", email = "denisecailab@gmail.com"},
]
dependencies = [
    "bokeh>=1.4.0",
    "cvxpy>=1.1.11",
    "dask>=2025.1.0",
    "datashader>=0.12.1",
    "distributed>=2025.1.0",
    "ecos>=2.0.7",
    "ffmpeg-python>=0.2.0",
    "holoviews>=1.12.7",
    "jinja2>=2.11.3",
    "jupyter",
    "matplotlib",
    "medpy>=0.4.0",
    "natsort",
    "netcdf4",
    "networkx>=2.4",
    "numpy>=1.20.2",
    "opencv-python>=4.2.0.34",
    "pandas>=1.2.3",
    "panel>=0.8.0",
    "pooch>=1.6.0",
    "pyfftw>=0.12.0",
    "rechunker>=0.3.3",
    "scikit-image>=0.18.1",
    "scikit-learn>=0.22.1",
    "scipy>=1.4.1",
    "scs",
    "simpleitk>=2.0.2",
    "sk-video",
    "sparse>=0.11.2",
    "statsmodels>=0.11.1",
    "tifffile",
    "xarray>=0.17.0",
    "zarr",
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/DeniseCaiLab/minian"
Documentation = "https://minian.readthedocs.io/"

[project.scripts]
# `minian` is the canonical CLI; the rest are thin deprecated aliases.
minian = "minian.cli:main"
minian-install = "minian.install:main"
minian-notebooks = "minian.cli:notebooks_main"
minian-data = "minian.cli:data_main"

[project.optional-dependencies]
numba = [
    "numba>=0.52.0",
]
test = [
    "minian[numba]",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "psutil>=7.2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
# pdm-backend auto-detects the `minian` package and ships every file under it,
# which now includes the bundled notebooks and their assets. Keep build junk
# and notebook execution caches out of the wheel.
excludes = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.ipynb_checkpoints",
    "**/*.nbi",
    "**/*.nbc",
]
# Ship the maintainer Zenodo helper in the sdist (not the wheel).
source-includes = ["scripts/", "minian/test/"]

[tool.pdm.scripts]
lock.composite = [
    'pdm lock --with :all --python=">=3.10,<3.12"',
    'pdm lock --with :all --python=">=3.12,<3.14" --append',
    'pdm lock --with :all --python=">=3.14" --append'
]
# The `not slow` default lives in pytest config (addopts) so a bare
# `python -m pytest` behaves exactly like `pdm run test`. `test-all` clears
# the marker filter to also run the heavy end-to-end notebook runs; CI uses it
# across the whole matrix because the pipeline notebook is currently our main
# cross-version/cross-OS integration coverage.
test = "pytest"
test-all = "pytest -m ''"

# Dependency cooldown: exclude packages published in the last 7 days when
# resolving the lockfile, dodging most supply-chain attacks (usually caught
# within ~a week). PDM has no way to enforce a minimum tool version from
# pyproject.toml, so note it here: reading exclude-newer from this table
# requires PDM >= 2.26.9. Older PDMs SILENTLY IGNORE it. CI pins the floor.
[tool.pdm.resolution]
exclude-newer = "7d"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "v$version"
changelog_incremental = true
version_files = [
    "minian/__init__.py:__version__"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["UP"]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = [
    '-v',
    '--color=yes',
    '--cov=minian',
    # Deselect the heavy notebook runs by default; `pdm run test-all` (and CI)
    # clear this with `-m ''`. Keeps bare `python -m pytest` fast and identical
    # to `pdm run test`.
    '-m', 'not slow',
]
testpaths = [
  "minian/test"
]
markers = [
  "slow: heavy end-to-end notebook runs (deselect with '-m \"not slow\"')",
]


