[project]
name = "minian"
dynamic = ["version"]
description = "MiniAn is an analysis pipeline and visualization tool inspired by both CaImAn and MIN1PIPE package specifically for Miniscope data."
authors = [
    {name = "MiniAn Developers", email = "denisecailab@gmail.com"},
]
dependencies = [
    "bokeh>=1.4.0",
    "cvxpy>=1.1.11",
    "dask>=2025.1.0",
    "datashader>=0.12.1",
    "distributed>=2025.1.0",
    "ecos>=2.0.7",
    "ffmpeg-python>=0.2.0",
    "holoviews>=1.12.7",
    "jinja2>=2.11.3",
    "jupyter",
    "matplotlib",
    "medpy>=0.4.0",
    "natsort",
    "netcdf4",
    "networkx>=2.4",
    "numpy>=1.20.2",
    "opencv-python>=4.2.0.34",
    "pandas>=1.2.3",
    "panel>=0.8.0",
    "pooch>=1.6.0",
    "pyfftw>=0.12.0",
    "rechunker>=0.3.3",
    "scikit-image>=0.18.1",
    "scikit-learn>=0.22.1",
    "scipy>=1.4.1",
    "scs",
    "simpleitk>=2.0.2",
    "sk-video",
    "sparse>=0.11.2",
    "statsmodels>=0.11.1",
    "tifffile",
    "typing_extensions>=4.0",
    "xarray>=0.17.0",
    "zarr",
]

requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "calcium-imaging",
    "miniscope",
    "neuroscience",
    "cnmf",
    "image-processing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/miniscope/minian"
Documentation = "https://minian.readthedocs.io/"
Repository = "https://github.com/miniscope/minian"
Issues = "https://github.com/miniscope/minian/issues"
Changelog = "https://github.com/miniscope/minian/blob/master/CHANGELOG.md"

[project.scripts]
# `minian` is the canonical CLI. `minian-install` is a thin deprecated alias for
# the one command that actually shipped before; new functionality lives only
# under `minian` subcommands (`minian data ...`, `minian notebooks ...`).
minian = "minian.cli:main"
minian-install = "minian.install:main"

[project.optional-dependencies]
numba = [
    "numba>=0.52.0",
]
test = [
    "minian[numba]",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "psutil>=7.2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
# Derive the package version from `v*` git tags via pdm-backend's SCM
# source. Builds between tags get a PEP 440 dev version like
# `1.3.0.dev41+g<sha>`; tagged builds get the clean tag version. This
# removes the four-way drift risk we had with a hardcoded version.
source = "scm"
tag_filter = "v*"
tag_regex = 'v(?P<version>([1-9][0-9]*!)?(0|[1-9][0-9]*)(\.(0|[1-9][0-9]*))*((a|b|c|rc)(0|[1-9][0-9]*))?(\.post(0|[1-9][0-9]*))?(\.dev(0|[1-9][0-9]*))?$)$'

[tool.pdm.build]
# pdm-backend auto-detects the `minian` package and ships every file under it,
# which now includes the bundled notebooks and their assets. Keep build junk
# and notebook execution caches out of the wheel.
excludes = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.ipynb_checkpoints",
    "**/*.nbi",
    "**/*.nbc",
]
# Ship the maintainer Zenodo helper in the sdist (not the wheel).
source-includes = ["scripts/", "minian/test/"]

[tool.pdm.scripts]
lock.composite = [
    'pdm lock --with :all --python=">=3.10,<3.12"',
    'pdm lock --with :all --python=">=3.12,<3.14" --append',
    'pdm lock --with :all --python=">=3.14" --append'
]
# The `not slow` default lives in pytest config (addopts) so a bare
# `python -m pytest` behaves exactly like `pdm run test`. `test-all` clears
# the marker filter to also run the heavy end-to-end notebook runs; CI uses it
# across the whole matrix because the pipeline notebook is currently our main
# cross-version/cross-OS integration coverage.
test = "pytest"
test-all = "pytest -m ''"

# Dependency cooldown: exclude packages published in the last 7 days when
# resolving the lockfile, dodging most supply-chain attacks (usually caught
# within ~a week). PDM has no way to enforce a minimum tool version from
# pyproject.toml, so note it here: reading exclude-newer from this table
# requires PDM >= 2.26.9. Older PDMs SILENTLY IGNORE it. CI pins the floor.
[tool.pdm.resolution]
exclude-newer = "7d"

[tool.commitizen]
name = "cz_conventional_commits"
# `version_provider = "scm"` makes commitizen read the current version from
# the latest git tag instead of from a static field, so `cz bump` no longer
# writes to pyproject/__init__/install.py — it just creates the next tag
# and updates the changelog.
version_provider = "scm"
tag_format = "v$version"
changelog_incremental = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["UP"]
fixable = ["ALL"]

[tool.pytest.ini_options]
addopts = [
    '-v',
    '--color=yes',
    '--cov=minian',
    # Deselect the heavy notebook runs by default; `pdm run test-all` (and CI)
    # clear this with `-m ''`. Keeps bare `python -m pytest` fast and identical
    # to `pdm run test`.
    '-m', 'not slow',
]
testpaths = [
  "minian/test"
]
markers = [
  "slow: heavy end-to-end notebook runs (deselect with '-m \"not slow\"')",
]




